--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "styled-components": "^5.3.6"
   },
   "scripts": {
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-table": "^7.7.13",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
